tests/rosetta/out/C/15-puzzle-game.error
cc: exit status 1
/tmp/15-puzzle-game.c: In function ‘isSolved’:
/tmp/15-puzzle-game.c:171:9: error: ‘board’ undeclared (first use in this function)
  171 |     if (board.data[i] != solved.data[i]) {
      |         ^~~~~
/tmp/15-puzzle-game.c:171:9: note: each undeclared identifier is reported only once for each function it appears in
/tmp/15-puzzle-game.c:171:26: error: ‘solved’ undeclared (first use in this function); did you mean ‘isSolved’?
  171 |     if (board.data[i] != solved.data[i]) {
      |                          ^~~~~~
      |                          isSolved
/tmp/15-puzzle-game.c: In function ‘isValidMove’:
/tmp/15-puzzle-game.c:181:12: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  181 |     return (tmp_item_t){.idx = empty - 4,
      |            ^
/tmp/15-puzzle-game.c:185:12: error: incompatible types when returning type ‘tmp_item1_t’ but ‘int’ was expected
  185 |     return (tmp_item1_t){.idx = empty + 4,
      |            ^
/tmp/15-puzzle-game.c:189:12: error: incompatible types when returning type ‘tmp_item2_t’ but ‘int’ was expected
  189 |     return (tmp_item2_t){.idx = empty + 1, .ok = empty % 4 < 3};
      |            ^
/tmp/15-puzzle-game.c:192:12: error: incompatible types when returning type ‘tmp_item3_t’ but ‘int’ was expected
  192 |     return (tmp_item3_t){.idx = empty - 1, .ok = empty % 4 > 0};
      |            ^
/tmp/15-puzzle-game.c:194:10: error: incompatible types when returning type ‘tmp_item4_t’ but ‘int’ was expected
  194 |   return (tmp_item4_t){.idx = 0, .ok = 0};
      |          ^
/tmp/15-puzzle-game.c: In function ‘doMove’:
/tmp/15-puzzle-game.c:199:11: error: request for member ‘data’ in something not a structure or union
  199 |   if (((!r.data["ok"]))) {
      |           ^
/tmp/15-puzzle-game.c:203:11: warning: implicit declaration of function ‘_int’; did you mean ‘_input’? [-Wimplicit-function-declaration]
  203 |   int j = _int(r.data["idx"]);
      |           ^~~~
      |           _input
/tmp/15-puzzle-game.c:203:17: error: request for member ‘data’ in something not a structure or union
  203 |   int j = _int(r.data["idx"]);
      |                 ^
/tmp/15-puzzle-game.c:204:13: error: ‘board’ undeclared (first use in this function)
  204 |   int tmp = board.data[i];
      |             ^~~~~
/tmp/15-puzzle-game.c: In function ‘printBoard’:
/tmp/15-puzzle-game.c:225:15: error: ‘board’ undeclared (first use in this function)
  225 |     int val = board.data[i];
      |               ^~~~~
/tmp/15-puzzle-game.c: In function ‘playOneMove’:
/tmp/15-puzzle-game.c:277:7: warning: ‘return’ with no value, in function returning non-void
  277 |       return;
      |       ^~~~~~
/tmp/15-puzzle-game.c:250:5: note: declared here
  250 | int playOneMove() {
      |     ^~~~~~~~~~~
/tmp/15-puzzle-game.c:295:5: warning: ‘return’ with no value, in function returning non-void
  295 |     return;
      |     ^~~~~~
/tmp/15-puzzle-game.c:250:5: note: declared here
  250 | int playOneMove() {
      |     ^~~~~~~~~~~
